Fix slide chang flicker

--- a/src/components/homepage/casestudies/casestudy.scss
+++ b/src/components/homepage/casestudies/casestudy.scss
@@ -92,7 +92,6 @@
 					}
 				}
 				.overlay {
-					transition: 0.4s ease;
 					background: linear-gradient(
 						rgba(0, 0, 0, 0.65),
 						rgba(0, 0, 0, 0) 50%,
@@ -103,8 +102,6 @@
 					bottom: -1px;
 					left: -1px;
 					right: -1px;
-					border-radius: 20px;
-					box-shadow: inset 0px 0px 130px rgba(0, 0, 0, 0.7);
 				}
 			}
 
@@ -159,9 +156,7 @@
 							margin-right: -20px;
 						}
 					}
-					.overlay {
-						box-shadow: inset 0px 0px 130px 10px rgba(0, 0, 0, 0.2);
-					}
+
 					.category {
 						h1 {
 							margin-top: -20px;
